--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <div class="hero">
-        <h1>Kunc Equesterian</h1>
+        <h1>Kunc Equestrian</h1>
     </div>
 </div>
 
