--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="/login">
+                    <form id="login-form" class="form" action="/login" method="post">
                         <h3 class="text-center">Login</h3>
                         <div class="form-group">
                             <label>Username:</label><br>
