--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/horses">Our horses</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/profile">Members</a>
+                    </li>
                 </ul>
             </div>
             <form class="d-flex">
-                <a class="btn btn-secondary" href="/profile" type="button">LOG-IN</a>
+                <a class="btn btn-secondary" href="/login" type="button">LOG-IN</a>
             </form>
         </div>
     </nav>
