--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,12 +5,17 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid align-items-center text-center">
+<div class="container-fluid text-center">
     <h2>Your profile</h2>
-    <b>NAME: </b> {{ user.name }}
-    <br>
-    <b>EMAIL: </b> {{ user.email }}
-    <br>
-    <a href="/messages">Members lounge</a>
+    <div class="row">
+        <div class="col-md-8 mx-auto profile-box">
+            <img src="/static/img/icon.png">
+            <ul>
+                <h4>{{ user.name }}</h4>
+                <b>EMAIL: </b> {{ user.email }}
+            </ul>
+        </div>
+    </div>
+    <a class="btn btn-primary" href="/messages" type="button">Members lounge</a>
 </div>
 {% endblock content %}
