--- a/templates/messages.html
+++ b/templates/messages.html
@@ -37,8 +37,7 @@
                     <div class="form-group">
                         <textarea name="message" placeholder="Enter your message" class="form-control"></textarea>
                     </div>
-                    <br>
-                    <button class="btn btn-secondary" type="submit">Send message</button>
+                    <button class="btn btn-main" type="submit">Send message</button>
                     <br>
                 </form>
             </div>
