--- a/templates/login.html
+++ b/templates/login.html
@@ -5,33 +5,29 @@
 {% endblock title %}
 
 {% block content %}
-<div id="login">
-    <div class="container">
-        <div id="login-row" class="row justify-content-center align-items-center">
-            <div id="login-column" class="col-md-6">
-                <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="/login" method="post">
-                        <h3 class="text-center">Login</h3>
-                        <div class="form-group">
-                            <label>Username:</label><br>
-                            <input type="text" name="user-name" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label>E-mail:</label><br>
-                            <input type="text" name="user-email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label>Password:</label><br>
-                            <input type="text" name="user-password" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <br>
-                            <input type="submit" class="btn btn-secondary" value="LOG-IN">
-                        </div>
-                    </form>
+<div class="container-fluid">
+    <h2>Login</h2>
+    <div class="row">
+        <div class="col-md-8 mx-auto login-box">
+            <form id="login-form" class="form" action="/login" method="post">
+                <div class="form-group">
+                    <label>Username:</label><br>
+                    <input type="text" name="user-name" class="form-control">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label>E-mail:</label><br>
+                    <input type="text" name="user-email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Password:</label><br>
+                    <input type="text" name="user-password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="submit" class="btn btn-login" value="Submit">
+                </div>
+            </form>
         </div>
     </div>
 </div>
+
 {% endblock content %}
