--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <label>Password:</label><br>
-                    <input type="text" name="user-password" class="form-control">
+                    <input type="password" name="user-password" class="form-control">
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-login" value="Submit">
