--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label>E-mail:</label><br>
-                    <input type="text" name="user-email" class="form-control">
+                    <input type="email" name="user-email" class="form-control">
                 </div>
                 <div class="form-group">
                     <label>Password:</label><br>
